--- a/philo/Makefile
+++ b/philo/Makefile
@@ -1,5 +1,5 @@
 CC = cc
-CFLAGS = -Wall -Wextra -Werror -pthread -O3
+CFLAGS = -Wall -Wextra -Werror -pthread
 SRCS = helpers.c input.c main.c philo_helpers.c input.c main.c philos.c death.c
 OBJS = $(SRCS:.c=.o)
 NAME = philo
